<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:tools2="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/smallMargin_xhdp"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="in.altersense.taskapp.UserLoginActivity"
    tools2:ignore="MissingPrefix"
    android:background="@color/white">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            style="@style/LogoImage"
            android:id="@+id/imageView3" />

        <TextView
            style="@style/LogoCompanionText" />

        <TextView
            style="@style/BetaBadge" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/label_Login"
        android:textSize="@dimen/text_header_xhdpi"
        android:layout_marginBottom="@dimen/smallMargin_xhdp"
        android:textColor="@color/createTaskPrimaryActionBar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_email"
            android:scaleType="center"
            android:background="@color/transparent"/>

        <EditText android:id="@+id/loginEmailET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:inputType="textEmailAddress"
            android:hint="@string/hint_Email"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_key"
            android:scaleType="center"
            android:background="@color/transparent"/>

        <EditText android:id="@+id/loginPasswordET"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/hint_Password"/>

        <ImageButton android:id="@+id/loginShowPassButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_action_showpassword"
            android:scaleType="center"
            android:background="@color/transparent"/>

    </LinearLayout>

    <Button android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/smallMargin_xhdp"
        android:text="@string/label_SignIn"
        android:textSize="@dimen/text_subHeader_xhdpi"
        android:background="@color/taskPrimaryColor"
        android:textColor="@color/lightText" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/smallMargin_xhdp"
        android:gravity="center_vertical">

        <Button android:id="@+id/regButton"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        style="@style/transparentButton"
        android:text="@string/label_CreateAccount"
        android:textSize="@dimen/text_subHeader_xhdpi" />

        <ImageButton android:id="@+id/moreButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            style="@style/transparentButton"
            android:src="@drawable/ic_pink_action_more_vert" />

    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/lineColor"
        android:layout_marginTop="@dimen/thinMargin_xhdpi"
        android:layout_marginBottom="@dimen/thinMargin_xhdpi"
        android:orientation="horizontal" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Sign In using Google Account"
        android:id="@+id/googleAuthButton"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/common_signin_btn_text_dark"
        android:textColor="@color/lightText"
        android:layout_marginTop="@dimen/thinMargin_xhdpi"
        android:visibility="gone" />

</LinearLayout>
